--- a/HopesPartners_alpha/HopesPartners_alpha.csproj
+++ b/HopesPartners_alpha/HopesPartners_alpha.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\UserModelsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -241,6 +242,11 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\UserModels\Create.cshtml" />
+    <Content Include="Views\UserModels\Delete.cshtml" />
+    <Content Include="Views\UserModels\Details.cshtml" />
+    <Content Include="Views\UserModels\Edit.cshtml" />
+    <Content Include="Views\UserModels\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
